# scenario-analysis

./: .gitignore  README.md  pyproject.toml
src/scenario_analysis/: cli.py
src/scenario_analysis/analysis/: accident_risk.py  road_graph.py
src/scenario_analysis/features/: basic_stats.py  feature_vector.py  road_graph_features.py  semantic_ai.py
src/scenario_analysis/ingestion/: openscenario_xml.py
src/scenario_analysis/llm/: openai_client.py
src/scenario_analysis/model/: scenario.py
